Refactored the backend to account for users easier